# proyecto_final_metodos

./: .gitignore  AGENTS.md  DECISIONS.md  IMPLEMENTATION_LOG.md  README.md  TASKS.md  pyproject.toml
data/processed/: insample.csv  outofsample.csv  panel_insample.csv  panel_outofsample.csv
data/raw/: panel_spy_2026-01-07_2026-07-02.csv  spy_options_2026-07-07.csv
docs/: articulo.md  plan.md  programa.md  rubrica.md
paper/: main.typ  refs.bib
presentacion/: guion.md
results/tables/: 02_errores_montecarlo.csv  04_costo_computacional.csv  05_resumen_datos.csv  06_errores.csv  06_errores_moneyness.csv  06_parametros.csv  08_resumen_panel.csv  09_errores_panel.csv  09_moneyness_panel.csv  09_parametros_panel.csv  09_por_fecha.csv
scripts/: 01_verify_heston_limit.py  02_verify_semimc.py  03_figs_articulo.py  04_numerical_analysis.py  05_get_data.py  06_calibrate.py  07_make_all.py  08_get_panel.py  09_calibrate_panel.py  _common.py
slides/: index.html
src/rsheston/: __init__.py  calibration.py  charfn.py  io_paths.py  market_data.py  montecarlo.py  pricing.py
tests/: test_calibration.py  test_charfn.py  test_montecarlo.py  test_pricing.py
