[project]
name = "rsheston"
version = "0.1.0"
description = "Valoración y calibración del modelo Heston de dos factores con cambio de régimen (Lin & He, 2021)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "yfinance>=1.5.1",
]

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
